fix: add word-break at contact email display

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -98,6 +98,7 @@
     color: #007CEE;
     margin-top: 0;
     text-decoration: none;
+    word-break: break-all;
 }
 
 hr {
